[CHANGE]: code-style fixes
