# internal/app/movieserver/movie_server.go
@@ -24,14 +24,14 @@ func configureMovieRouter(handler *movieDelivery.MovieHandler) *httprouter.Route
 	movieRouter.GET(movieConfig.URLPattern+":id/", handler.GetMovie)
 	movieRouter.GET(movieConfig.URLPattern, handler.GetMovieList)
 	movieRouter.POST(movieConfig.URLPattern+"rate/", handler.RateMovie)
-	movieRouter.GET(movieConfig.URLPattern + "/actual/", handler.GetMoviesInCinema)
+	movieRouter.GET(movieConfig.URLPattern+"/actual/", handler.GetMoviesInCinema)
 
 	return movieRouter
 }
 
 func Start(connection *sql.DB, authRep authentication.AuthRepository) (*MovieService, error) {
 	if connection == nil {
-		return nil, models.NoDataBaseConnection
+		return nil, models.ErrFooNoDBConnection
 	}
 	movieRep := movieRepository.NewMovieSQLRepository(connection)
 	movieUC := movieUseCase.NewMovieUseCase(movieRep)
